fixed left scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,3 +45,7 @@
 .actMinH{
   min-height: 400px;
 }
+
+:host /deep/ clr-tree-node {
+  overflow-y: visible !important;
+}
